--- a/inicio-Soundcloud.html
+++ b/inicio-Soundcloud.html
@@ -6,51 +6,80 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Inicio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
   <link rel="shorcut icon" href="img/icon.png">
-  <link rel="stylesheet" href="fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="css/nav-soundcloud.css">
-  <link rel="stylesheet" href="css/inicio-soundcloud.css">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/navbar-soundcloud.css">
+<link rel="stylesheet" href="fontawesome/css/all.min.css">
+<link rel="stylesheet" href="css/navbar-soundcloud.css">
 
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 2.8rem;
+        }     
+      }
+      @media (min-width: 768px) {
+
+        #nav-principal{
+            max-height:2.8rem;
+          }
+
+
+      }
+    </style>
 
 </head>
+<header>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="nav-principal">
+    <a class="navbar-brand" href="inicio-soundcloud.html" style="margin-left:3%;"><img src="img/icono1.png" alt="SoundCloud" class="icono"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav" style="margin-right: 30px ">
+        <li class="nav-item active" id="btn-inicio" style="width: 75px;" >
+          <a class="nav-link " href="inicio-soundcloud.html" >Inicio <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item"id="btn-stream"style="width: 75px;">
+          <a class="nav-link" href="#" >Stream</a>
+        </li>
+        <li class="nav-item"id="btn-biblioteca"style="width: 75px;">
+          <a class="nav-link" href="Biblioteca-resumen.html" tabindex="-1" id="btn-biblioteca">Biblioteca </a>
+        </li>
+      </ul>
 
-<body  style="background-color:#F2F2F2"> 
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md  fixed-top bg-dark" id="nav-principal">
-      <div class="navbar-header">
-      <a href="#" style="margin-left: 3.375rem;"><img src="img/icono1.png" alt="SoundCloud" class="icono"></a>
-     </div>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <button type="button" class="btn-navbar" id="btn-inicio">Inicio</button>
+      <form class="form-inline mt-2 mt-md-0">
+        <input class="form-control" type="text" placeholder="Search" aria-label="Search"  id="barra-busqueda">
+        <button  type="button" id="btn-busqueda"><i class="fas fa-search"></i></button>
+      </form>
+
+      <ul class="navbar-nav mr-0">
+          <li class="nav-item">
+              <a class="nav-link" href="#"  id="btn-subir" >Subir</a>
           </li>
-          <li class="nav-item active">
-            <button type="button" class="btn-navbar" id="btn-stream">Stream</button>
-          </li>
-          <li class="nav-item active">
-            <button type="button" class="btn-navbar" id="btn-biblioteca">Biblioteca</button>
-          </li>
-          <form class="form-inline">
-            <input class="barra-busqueda" type="text" placeholder="Buscar" aria-label="Buscar" id="barra-busqueda">
-            <button type="button" id="btn-busqueda">
-              <i class="fas fa-search"></i>
-            </button>
-          </form>
-          <li class="nav-item active">
-            <button type="button" class="btn-navbar" id="btn-subir">Subir</button>
-          </li>
-          <li class="nav-item active">
+
+          <li class="nav-item ">
             <div class="dropdown show" id="dropd-nav">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropd-nav" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false" style="padding-top: 0.7rem; ">
-                Dropdown link
+                Spike Spiguel 
               </a>
 
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <div class="dropdown-menu" aria-labelledby="dropd-nav">
                 <a class="dropdown-item" href="#">Perfil</a>
-                <a class="dropdown-item" href="#">Me gusta</a>
+                <a class="dropdown-item" href="biblioteca-megusta.html">Me gusta</a>
                 <a class="dropdown-item" href="#">Emisoras</a>
                 <a class="dropdown-item" href="#">Action</a>
                 <a class="dropdown-item" href="#">Siguiendo</a>
@@ -60,22 +89,27 @@
               </div>
             </div>
           </li>
-          <li class="nav-item active">
-            <button type="button" class="icn-navbar" >
-              <i class="far fa-bell"></i> </button>
+
+          <li class="nav-item">
+              <a class="nav-link" href="#"><i class="far fa-bell"></i></a>
           </li>
-          <li class="nav-item active">
-            <button type="button" class="icn-navbar" >
-              <i class="far fa-envelope"></i> </button>
+
+          <li class="nav-item">
+              <a class="nav-link" href="#"><i class="far fa-envelope"></i></a>
           </li>
-          <li class="nav-item active">
-            <button type="button" class="icn-navbar">
-              <i class="fas fa-ellipsis-h"></i> </button>
+
+          <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fas fa-ellipsis-h"></i></a>
           </li>
+
+
         </ul>
-      </div>
-    
-    </nav>
+    </div>
+  </nav>
+</header>
+
+<body  style="background-color:#F2F2F2"> 
+ 
 
   <!-- Begin page content -->
   <main role="main">
@@ -120,15 +154,13 @@
     </div> 
     </div>
   </main>
-    
 
-  <!-- <footer class="footer mt-auto">
-    <div class="container">
-      <span class="text-muted">Aqui colocaria un reproductor de musica si tuviera unoooo</span>
-    </div>
-  </footer> -->
-
-
+  <footer class="footer mt-auto py-3 ">
+      <div class="container">
+        <span class="text-muted">Aqui Colocaria mi Reproductor !Si tubiera Uno!</span>
+      </div>
+    </footer>
+   
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </body>
